Cambios realizados: - Splash con logos de la institución - Pantalla Login (Solo necesitaba hacerla para probar los cambios de pantalla, no importa si la cambias) - Activity de menu principal aún no la he personalizo, estoy buscando una opción para hacer un menú lateral - El icono de la aplicación tiene el del Colegio

--- a/app/src/main/res/layout/activity_principal_menu.xml
+++ b/app/src/main/res/layout/activity_principal_menu.xml
@@ -16,5 +16,5 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:text="texto de prueba" />
+        android:text="MENU EN PROCESO" />
 </LinearLayout>
