--- a/app/src/main/res/drawable/button_rounded.xml
+++ b/app/src/main/res/drawable/button_rounded.xml
@@ -4,7 +4,7 @@
             <shape android:shape="rectangle"  >
                 <corners android:radius="50dip" />
                 <stroke android:width="3dip" android:color="#ffffff" />
-                <solid android:color="#0074BD" />
+                <solid android:color="#2B9703" />
 
 
                 <!--<gradient android:angle="-90" android:startColor="#DD2C00" android:endColor="#FFAB00" />-->
