--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="183dp"
         android:layout_height="171dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="44dp"
         android:contentDescription="@string/imagen_de_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +45,7 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPersonName"
+        android:password="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
@@ -58,6 +59,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_rounded"
         android:text="@string/btn_iniciarSesion"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
