--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,39 @@
         android:id="@+id/nav_home"
         android:name="com.liceoatarraya.app.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_nav_gallery"
+            app:destination="@id/clases" />
+        <action
+            android:id="@+id/action_nav_home_to_nav_slideshow"
+            app:destination="@id/calendario" />
+        <action
+            android:id="@+id/action_nav_home_to_notas"
+            app:destination="@id/notas" />
+        <action
+            android:id="@+id/action_nav_home_to_configuracion"
+            app:destination="@id/configuracion" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/clases"
         android:name="com.liceoatarraya.app.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/clases"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/calendario"
         android:name="com.liceoatarraya.app.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/calendario"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/notas"
+        android:name="com.liceoatarraya.app.notas"
+        android:label="fragment_notas"
+        tools:layout="@layout/fragment_notas" />
+    <fragment
+        android:id="@+id/configuracion"
+        android:name="com.liceoatarraya.app.SettingsFragment"
+        android:label="@string/config" />
 </navigation>
