--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,37 +8,54 @@
     tools:context=".ui.home.HomeFragment"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/banercolegio"
-        android:layout_width="match_parent"
-        android:layout_height="124dp"
-        android:layout_marginLeft="10dp"
+        android:id="@+id/imageView3"
+        android:layout_width="381dp"
+        android:layout_height="80dp"
         android:layout_marginTop="16dp"
-        android:layout_marginRight="10dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/descripcion"
         android:src="@drawable/imagenhome"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextClock
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </TextClock>
+    <TextView
+        android:id="@+id/txtBienvenido"
+        android:layout_width="99dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:text="Bienvenido:"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/txtNombreAcceso"
+        app:layout_constraintHorizontal_bias="0.576"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txtNombreAcceso"
+        android:layout_width="237dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:hint="Nombre del Alumno"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+    <TextView
+        android:id="@+id/txtPalabrasBienvenida"
+        android:layout_width="347dp"
+        android:layout_height="198dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="232dp"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod auctor sapien egestas consequat. Vestibulum eu mi vel massa posuere elementum nec a lacus"
+        android:textAlignment="gravity"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNombreAcceso" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
