Corrección opciones menu lateral

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_inicio"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
+    android:background="@drawable/splash2"
     android:paddingStart="65dp"
     android:paddingTop="16dp"
     android:paddingEnd="64dp"
