--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,23 +9,28 @@
             android:icon="@drawable/ic_inicio"
             android:title="@string/menu_home" />
     </group>
-  <item android:title="">
+  <item android:title="Opciones Institucionales">
       <menu>
       <item
-            android:id="@+id/clases"
-            android:icon="@drawable/ic_clases"
-            android:title="@string/clases" />
+            android:id="@+id/menu"
+            android:icon="@drawable/ic_menu"
+            android:title="@string/menu" />
         <item
-            android:id="@+id/calendario"
-            android:icon="@drawable/ic_calendario"
-            android:title="@string/calendario" />
+            android:id="@+id/notificaciones"
+            android:icon="@drawable/ic_notificaciones"
+            android:title="@string/notificaciones" />
         <item
-            android:id="@+id/action_nav_home_to_notas"
-            android:icon="@drawable/ic_notas"
-            android:title="@string/notas" />
+            android:id="@+id/mensajes"
+            android:icon="@drawable/ic_mensajes"
+            android:title="@string/mensajes" />
       </menu>
   </item>
-    <item android:title=""><menu>
+    <item android:title="Opciones de la aplicación"><menu>
+        <item
+            android:id="@+id/perfil"
+            android:icon="@drawable/ic_baseline_account_circle_24"
+            android:title="@string/perfil" />
+
         <item
             android:id="@+id/configuracion"
             android:icon="@drawable/ic_settings"
