--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -35,5 +35,9 @@
             android:id="@+id/configuracion"
             android:icon="@drawable/ic_settings"
             android:title="@string/config" />
+        <item
+            android:id="@+id/salir"
+            android:icon="@drawable/ic_exit"
+            android:title="@string/salir" />
     </menu></item>
 </menu>
