--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,6 +38,7 @@
         <item
             android:id="@+id/salir"
             android:icon="@drawable/ic_exit"
-            android:title="@string/salir" />
+            android:title="@string/salir"
+            android:onClick="onclick"/>
     </menu></item>
 </menu>
