--- a/app/src/main/res/layout/aulavirtual_activity.xml
+++ b/app/src/main/res/layout/aulavirtual_activity.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".aulavirtual_activity">
+    tools:context=".layout.aulavirtual_activity"
+    >
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
