--- a/app/src/main/res/layout/calendario_activity.xml
+++ b/app/src/main/res/layout/calendario_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".calendario_activity">
+    tools:context=".layout.calendario_activity">
 
     <TextView
         android:id="@+id/textView2"
