--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blanco">#ffffff</color>
     <color name="oscuro">#242424</color>
     <color name="black_overlay">#66000000</color>
+    <color name="atarraya">#2271b3</color>
 </resources>
