--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,11 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.perfil">
+    android:layout_width="match_parent"
+    tools:context=".layout.menuNavegacion">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="parent">
+        <LinearLayout
+            android:id="@+id/linlay_foto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="15dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+            </LinearLayout>
+            <TextView
+                android:id="@+id/txt_titulo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Actualizar perfil"
+                android:textAlignment="center"
+                android:textColor="@color/oscuro"
+                android:textSize="18sp"></TextView>
+        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linlay_opciones"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/txt_nombreUsuario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Nombre de Usuario"
+                    android:textColor="@color/oscuro"
+                    android:textSize="18sp"/>
+                <EditText
+                    android:id="@+id/edtext_usuario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dip"
+                    android:background="@drawable/rounded_edittext_focused"/>
+                <TextView
+                    android:id="@+id/txt_Claveactual"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Contraseña Actual"
+                    android:textColor="@color/oscuro"
+                    android:textSize="18sp" />
 
-</RelativeLayout>
+                <EditText
+                    android:id="@+id/edtext_ClaveActual"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edtext_states"
+                    android:padding="5dip" />
+
+                <TextView
+                    android:id="@+id/txt_nuevacontra"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Nueva Contraseña"
+                    android:textColor="@color/oscuro"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/edtext_nuevacontra"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edtext_states"
+                    android:padding="5dip" />
+
+                <TextView
+                    android:id="@+id/txt_confirmarcontra"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Confirmar contraseña"
+                    android:textColor="@color/oscuro"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/edtext_confirmarcontra"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edtext_states"
+                    android:padding="5dip" />
+            </LinearLayout>
+        <Button
+            android:id="@+id/enviar_datos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@color/atarraya"
+            android:text="Actualizar Datos"
+            android:textColor="@color/blanco" />
+    </LinearLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
