--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle" android:padding="10dp">
-        <solid android:color="#FFFFFF"/>
+        <solid android:color="#2196F3"/>
         <corners
             android:bottomRightRadius="10dp"
             android:bottomLeftRadius="10dp"
