Correccción de fragment menu, ya no genera ningun error el datepicker sin embargo tampoco realiza trabajo

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -22,7 +22,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/date_input"
+            android:id="@+id/txt_dateInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
