--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,44 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:xmnls="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     tools:context=".fragments.Menu">
-    <TextView
-        android:id="@+id/informacion"
-        android:text="@string/txtView_informacion"
-        android:textSize="15sp"
-        android:textAlignment="center"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/txt_dateInput"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="20dp"
-            android:hint="@string/edtext_datein"
-            android:inputType="none" />
+            android:layout_margin="15dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="parent">
+            <LinearLayout
+               android:layout_height="match_parent"
+                android:layout_width="wrap_content">
+                <TextView
+                    android:id="@+id/informacion"
+                    android:text="@string/txtView_informacion"
+                    android:textSize="15sp"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/btn_consultarmenu"
-            android:layout_width="122dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/atarraya"
-            android:text="@string/btn_consultarmenu"
-            android:textColor="@color/blanco" />
-    </LinearLayout>
-</LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="32dp">
+
+                <TextView
+                    android:id="@+id/txt_dateInput"
+                    android:layout_width="250dp"
+                    android:layout_height="match_parent"
+                    android:hint="@string/edtext_datein"
+                    android:textAlignment="center"
+                    android:inputType="none" />
+                <TextView
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"/>
+
+                <ImageButton
+                    android:id="@+id/btn_consultarmenu"
+                    android:layout_width="55dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"
+                    android:background="@color/atarraya"
+                    android:src="@drawable/ic_food" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/enviar_datos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@color/atarraya"
+                android:text="Consultar menú"
+                android:textColor="@color/blanco" />
+        </LinearLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
