--- a/app/src/main/res/layout/fragment_mensajes.xml
+++ b/app/src/main/res/layout/fragment_mensajes.xml
@@ -8,7 +8,7 @@
         <ListView
             android:id="@+id/messageList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="600dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
