Creación de activities : calendario_maestro, menu_maestro , principal_maestro Ahorita me falta trabajar en el activity de aula virtual (es el más trabajoso) hay pequeños errores y consultas que no logro solventarlos, espero avanzar con lo demás y luego dedicarme solo a estos pequeños problemas.

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -66,7 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
-                    android:background="@color/atarraya"
+                    android:background="@color/colorPrimary"
                     android:text="Consultar menú"
                     android:textColor="@color/blanco" />
 
