--- a/app/src/main/res/menu/menumaestro.xml
+++ b/app/src/main/res/menu/menumaestro.xml
@@ -20,10 +20,16 @@
         android:orderInCategory="3"
         xmnls:showAsAction="never"/>
     <item
+        android:id="@+id/menu_maestro"
+        android:icon="@drawable/ic_menu"
+        android:title="Menú Diario"
+        android:orderInCategory="4"
+        xmnls:showAsAction="never"/>
+    <item
         android:id="@+id/exit_maestro"
         android:icon="@drawable/ic_exit"
         android:title="Salir"
-        android:orderInCategory="4"
+        android:orderInCategory="5"
         xmnls:showAsAction="never"/>
 
 </menu>
